--- a/app/views/cmdb/sites/show.html.erb
+++ b/app/views/cmdb/sites/show.html.erb
@@ -1,10 +1,15 @@
-<% s = @site[:cmdb] %>
+<% s = @site.cmdb %>
 <h1><small>Site </small><%= s[:name] %> <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= s[:infrid] %>"><span class="fa fa-external-link"></span></a> <small>id: <%= s[:infrid] %></small></h1>
 <h4><small>Alias </small><%= s[:alias] %> <small>Acronym </small><%= s[:site_acro] %></h4>
 
 <table class="table table-striped table-condensed">
   <tbody>
-      <% ( %><tr><th>Parent site</th><td><%= s[:up_value] %>(id: <%= s[:up] %>)</td></tr><% ) if s[:up] %>
+  <% ( %>
+      <tr>
+      <th>Parent site</th>
+      <td><%= s[:up_value] %>(id: <%= s[:up] %>)</td>
+      </tr>
+  <% ) if s[:up] > 0 %>
       <tr><th>Type</th><td><%= s[:type] %></td></tr>
       <tr><th>Country</th><td><%= s[:country] %></td></tr>
       <tr><th>State</th><td><%= s[:the_state] %></td></tr>
@@ -16,9 +21,22 @@
       <tr><th>Open hours</th><td><%= s[:open_hours] %></td></tr>
       <tr><th>Step</th><td><%= s[:step] %></td></tr>
       <tr><th>Owner ORG</th><td><%= s[:owner_org_value] %></td></tr>
-      <tr><th>Created at | Modified at</th><td><%= DateTime.parse(s[:creationdate]).to_s(:long) %> | <%= DateTime.parse(s[:lastchangedate]).to_s(:long) %></td></tr>
-  <% ( %><tr><th>Moved to production</th><td><%= DateTime.parse(s[:first_mtp_date]).to_s(:long) %></td></tr><% ) unless (s[:first_mtp_date].nil? || s[:first_mtp_date] == "0000-00-00 00:00:00") %>
-  <% ( %><tr><th>Moved to obsolete</th><td><%= DateTime.parse(s[:last_obsolete_date]).to_s(:long) %></td></tr><% ) unless (s[:last_obsolete_date].nil? || s[:last_obsolete_date] == "0000-00-00 00:00:00") %>
+  <tr>
+    <th>Created at | Modified at</th>
+    <td><%= s[:creationdate].to_s(:long) %> | <%= s[:lastchangedate].to_s(:long) %></td>
+  </tr>
+  <% ( %>
+      <tr>
+      <th>Moved to production</th>
+      <td><%= s[:first_mtp_date].to_s(:long) %></td>
+      </tr>
+  <% ) unless (s[:first_mtp_date].nil? || s[:first_mtp_date] == "0000-00-00 00:00:00") %>
+  <% ( %>
+      <tr>
+      <th>Moved to obsolete</th>
+      <td><%= s[:last_obsolete_date].to_s(:long) %></td>
+      </tr>
+  <% ) unless (s[:last_obsolete_date].nil? || s[:last_obsolete_date] == "0000-00-00 00:00:00") %>
   </tbody>
 </table>
 
@@ -44,7 +62,7 @@
         <td><%= d["ip"] %></td>
         <td><%= d["step"] %></td>
         <td>
-          <%= link_to('<span class="fa fa-file-text"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_configuration"}) if device._attachments? && !device._attachments["configuration"].nil? %>
+          <%# = link_to('<span class="fa fa-file-text"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_configuration"}) if device._attachments? && !device._attachments["configuration"].nil? %>
           <%= link_to('<span class="fa fa-list-ol"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_interfaces"}) if device.device && device.device[:interfaces] %>
           <%= link_to('<span class="fa fa-tree"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_cdp"}) if device.device && device.device[:neighbors] && device.device[:neighbors][:cdp] %>
         </td>
