--- a/app/views/cmdb/devices/index.html.erb
+++ b/app/views/cmdb/devices/index.html.erb
@@ -1,4 +1,6 @@
-<h1>CMDB: Devices</h1>
+<h1>
+  <small>Devices</small>
+</h1>
 
 <table class="table table-striped table-condensed">
   <thead>
@@ -15,7 +17,7 @@
 
   <tbody>
   <% @devices.each do |device| %>
-  <% d = device[:cmdb]%>
+      <% d = device.cmdb %>
       <tr>
         <td><%= link_to d[:name], "/cmdb/devices/#{d[:infrid]}" %> <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= d[:infrid] %>"><span class="fa fa-external-link"></span></a></td>
         <td><%= link_to d[:sitid_value], "/cmdb/sites/#{d[:sitid]}" %> <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= d[:sitid] %>"><span class="fa fa-external-link"></span></a></td>
@@ -24,7 +26,7 @@
         <td><%= d["ip"] %></td>
         <td><%= d["step"] %></td>
         <td>
-          <%= link_to('<span class="fa fa-file-text"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_configuration"}) if device._attachments? && !device._attachments["configuration"].nil? %>
+          <%# = link_to('<span class="fa fa-file-text"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_configuration"}) if device._attachments? && !device._attachments["configuration"].nil? %>
           <%= link_to('<span class="fa fa-list-ol"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_interfaces"}) if device.device && device.device[:interfaces] %>
           <%= link_to('<span class="fa fa-tree"></span>'.html_safe, {controller: "cmdb/devices", id: device[:_id], action: "show_cdp"}) if device.device && device.device[:neighbors] && device.device[:neighbors][:cdp] %>
         </td>
