--- a/app/views/cmdb/interfaces/index.html.erb
+++ b/app/views/cmdb/interfaces/index.html.erb
@@ -1,4 +1,6 @@
-<h1>CMDB: Interfaces</h1>
+<h1>
+  <small>Interfaces</small>
+</h1>
 
 <table class="table table-striped table-condensed">
   <thead>
@@ -12,7 +14,7 @@
 
   <tbody>
   <% @interfaces.each do |interface| %>
-  <% i = interface[:cmdb]%>
+      <% i = interface.cmdb %>
       <tr>
         <td><%= link_to i[:name], "/cmdb/interfaces/#{i[:infrid]}" %> <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= i[:infrid] %>"><span class="fa fa-database"></span></a></td>
         <td><%= i[:ip] %>/<%= i[:ip_mask] %></td>
