--- a/app/views/cmdb/interfaces/show.html.erb
+++ b/app/views/cmdb/interfaces/show.html.erb
@@ -1,8 +1,18 @@
-<h1>CMDB: Interface <%= @interface[:cmdb][:name] %> on <%= @interface[:cmdb][:deviceid_value] %></h1>
+<% i = @interface.cmdb %>
+<h1>
+  <small>Interface</small> <%= i[:name] %>
+  <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= i[:infrid] %>"><span class="fa fa-external-link"></span></a>
+  <small>id: <%= i[:infrid] %></small>
+</h1>
+<h4>
+  <small>On device</small> <%= i[:deviceid_value] %>
+  <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= i[:deviceid] %>"><span class="fa fa-external-link"></span></a>
+  <small>id: <%= i[:deviceid] %></small>
+</h4>
 
 <table class="table table-striped table-condensed">
   <tbody>
-<% @interface[:cmdb].each do |key, value| %>
+  <% i.each do |key, value| %>
     <tr>
       <% ( %><th><%= key %></th><td><%= value %></td><% )  %>
     </tr>
