--- a/app/views/cmdb/lines/index.html.erb
+++ b/app/views/cmdb/lines/index.html.erb
@@ -1,4 +1,6 @@
-<h1>CMDB: Lines</h1>
+<h1>
+  <small>Lines</small>
+</h1>
 
 <table class="table table-striped table-condensed">
   <thead>
@@ -11,7 +13,7 @@
 
   <tbody>
   <% @lines.each do |line| %>
-  <% l = line[:cmdb]%>
+      <% l = line.cmdb %>
       <tr>
         <td><%= link_to l[:name], "/cmdb/lines/#{l[:infrid]}" %> <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= l[:infrid] %>"><span class="fa fa-database"></span></a></td>
         <td><%= link_to l[:sitid_value], "/cmdb/sites/#{l[:sitid]}" %> <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= l[:sitid] %>"><span class="fa fa-database"></span></a></td>
