--- a/app/views/cmdb/lines/show.html.erb
+++ b/app/views/cmdb/lines/show.html.erb
@@ -1,8 +1,13 @@
-<h1>CMDB: Line <%= @line[:cmdb][:name] %></h1>
+<% l = @line.cmdb %>
+<h1>
+  <small>Line</small> <%= l[:name] %>
+  <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= l[:infrid] %>"><span class="fa fa-external-link"></span></a>
+  <small>id: <%= l[:infrid] %></small>
+</h1>
 
 <table class="table table-striped table-condensed">
   <tbody>
-<% @line[:cmdb].each do |key, value| %>
+  <% l.each do |key, value| %>
     <tr>
       <% ( %><th><%= key %></th><td><%= value %></td><% )  %>
     </tr>
