--- a/app/views/cmdb/subnets/show.html.erb
+++ b/app/views/cmdb/subnets/show.html.erb
@@ -1,8 +1,13 @@
-<h1>CMDB: Subnet <%= @subnet[:cmdb][:name] %></h1>
+<% s = @subnet.cmdb %>
+<h1>
+  <small>Subnet</small> <%= s[:name] %>
+  <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= s[:infrid] %>"><span class="fa fa-external-link"></span></a>
+  <small>id: <%= s[:infrid] %></small>
+</h1>
 
 <table class="table table-striped table-condensed">
   <tbody>
-<% @subnet[:cmdb].each do |key, value| %>
+  <% s.each do |key, value| %>
     <tr>
       <% ( %><th><%= key %></th><td><%= value %></td><% )  %>
     </tr>
