--- a/app/views/cmdb/devices/show_cdp.html.erb
+++ b/app/views/cmdb/devices/show_cdp.html.erb
@@ -1,4 +1,8 @@
-<h1>CMDB:Device:CDP <%= @device_name %></h1>
+<h1>
+  <small>CDP neighbors of device</small> <%= @device_name %>
+  <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= @device_id %>"><span class="fa fa-external-link"></span></a>
+  <small>id: <%= @device_id %></small>
+</h1>
 
 <table class="table table-striped table-condensed">
   <thead>
