--- a/app/views/cmdb/devices/show_interfaces.html.erb
+++ b/app/views/cmdb/devices/show_interfaces.html.erb
@@ -1,4 +1,9 @@
-<h1>CMDB:Device:Interfaces <%= @device[:cmdb][:name] %></h1>
+<% d = @device.cmdb %>
+<h1>
+  <small>Interfaces on device</small> <%= d[:name] %>
+  <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= d[:infrid] %>"><span class="fa fa-external-link"></span></a>
+  <small>id: <%= d[:infrid] %></small>
+</h1>
 
 <table class="table table-striped table-condensed">
   <thead>
@@ -13,16 +18,18 @@
   </tr>
   </thead>
   <tbody>
-<% @device[:device][:interfaces].each do |interface| %>
-      <tr>
+  <% @device.device[:interfaces].each do |interface| %>
+      <tr
+      <% ( %> class="danger"
+      <% ) if interface[:shutdown] %>>
         <td><%= interface[:name] %></td>
         <td><%= interface[:desc] %></td>
         <td><%= interface[:mode] %></td>
-        <td><%= interface[:access_vlan] %> <%= ("(#{interface[:voice_vlan]})") if interface[:voice_vlan]%></td>
+        <td><%= interface[:access_vlan] %> <%= ("(#{interface[:voice_vlan]})") if interface[:voice_vlan] %></td>
         <td><%= interface[:trunk_native_vlan] %></td>
         <td><%= interface[:trunk_allowed_vlan] %></td>
         <td><%= interface[:shutdown] %></td>
       </tr>
-<% end %>
+  <% end %>
   </tbody>
 </table>
