--- a/app/views/cmdb/sites/show.html.erb
+++ b/app/views/cmdb/sites/show.html.erb
@@ -1,46 +1,85 @@
 <% s = @site.cmdb %>
-<h1>
-  <small>Site</small> <%= s[:name] %>
-  <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= s[:infrid] %>"><span class="fa fa-external-link"></span></a>
-  <small>id: <%= s[:infrid] %></small>
-</h1>
-<h4>
-  <small>Alias</small> <%= s[:alias] %>
-  <small>Acronym</small> <%= s[:site_acro] %></h4>
-
+<div class="row">
+  <div class="col-xs-11 col-sm-11 col-md-11 col-lx-11">
+    <h1>
+      <small>Site</small> <%= s[:name] %>
+      <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= s[:infrid] %>"><span class="fa fa-external-link"></span></a>
+      <small>id: <%= s[:infrid] %></small>
+    </h1>
+    <h4>
+      <small>Alias</small> <%= s[:alias] %>
+      <small>Acronym</small> <%= s[:site_acro] %></h4>
+  </div>
+  <div class="col-xs-1 col-md-1 col-lx-1">
+    <p class="text-right">
+      <%= link_to('<button type="button" class="btn btn-primary btn-sm">Update from devices</button><br />'.html_safe, {action: "update_from_devices"}) %>
+      <small>Created at</small> <%= s[:creationdate].to_s(:db) %>
+      <br/>
+      <small>Updated at</small> <%= s[:lastchangedate].to_s(:db) %>
+    </p>
+  </div>
+</div>
 <table class="table table-striped table-condensed">
   <tbody>
   <% ( %>
       <tr>
-      <th>Parent site</th>
-      <td><%= s[:up_value] %>(id: <%= s[:up] %>)</td>
+        <th>Parent site</th>
+        <td><%= s[:up_value] %>(id: <%= s[:up] %>)</td>
       </tr>
   <% ) if s[:up] > 0 %>
-      <tr><th>Type</th><td><%= s[:type] %></td></tr>
-      <tr><th>Country</th><td><%= s[:country] %></td></tr>
-      <tr><th>State</th><td><%= s[:the_state] %></td></tr>
-      <tr><th>City</th><td><%= s[:city] %></td></tr>
-      <tr><th>ZIP</th><td><%= s[:zip_code] %></td></tr>
-      <tr><th>Address</th><td><%= s[:address] %></td></tr>
-      <tr><th>Timezone</th><td><%= s[:timezone] %></tr>
-      <tr><th>Employee number</th><td><%= s[:empl_nb] %></td></tr>
-      <tr><th>Open hours</th><td><%= s[:open_hours] %></td></tr>
-      <tr><th>Step</th><td><%= s[:step] %></td></tr>
-      <tr><th>Owner ORG</th><td><%= s[:owner_org_value] %></td></tr>
   <tr>
-    <th>Created at | Modified at</th>
-    <td><%= s[:creationdate].to_s(:long) %> | <%= s[:lastchangedate].to_s(:long) %></td>
+    <th>Type</th>
+    <td><%= s[:type] %></td>
+  </tr>
+  <tr>
+    <th>Country</th>
+    <td><%= s[:country] %></td>
+  </tr>
+  <tr>
+    <th>State</th>
+    <td><%= s[:the_state] %></td>
+  </tr>
+  <tr>
+    <th>City</th>
+    <td><%= s[:city] %></td>
+  </tr>
+  <tr>
+    <th>ZIP</th>
+    <td><%= s[:zip_code] %></td>
+  </tr>
+  <tr>
+    <th>Address</th>
+    <td><%= s[:address] %></td>
+  </tr>
+  <tr>
+    <th>Timezone</th>
+    <td><%= s[:timezone] %></tr>
+  <tr>
+    <th>Employee number</th>
+    <td><%= s[:empl_nb] %></td>
+  </tr>
+  <tr>
+    <th>Open hours</th>
+    <td><%= s[:open_hours] %></td>
+  </tr>
+  <tr>
+    <th>Step</th>
+    <td><%= s[:step] %></td>
+  </tr>
+  <tr>
+    <th>Owner ORG</th>
+    <td><%= s[:owner_org_value] %></td>
   </tr>
   <% ( %>
       <tr>
-      <th>Moved to production</th>
-      <td><%= s[:first_mtp_date].to_s(:long) %></td>
+        <th>Moved to production</th>
+        <td><%= s[:first_mtp_date].to_s(:long) %></td>
       </tr>
   <% ) unless (s[:first_mtp_date].nil? || s[:first_mtp_date] == "0000-00-00 00:00:00") %>
   <% ( %>
       <tr>
-      <th>Moved to obsolete</th>
-      <td><%= s[:last_obsolete_date].to_s(:long) %></td>
+        <th>Moved to obsolete</th>
+        <td><%= s[:last_obsolete_date].to_s(:long) %></td>
       </tr>
   <% ) unless (s[:last_obsolete_date].nil? || s[:last_obsolete_date] == "0000-00-00 00:00:00") %>
   </tbody>
@@ -60,9 +99,11 @@
 
   <tbody>
   <% @devices.each do |device| %>
-      <% d = device[:cmdb]%>
+      <% d = device[:cmdb] %>
       <tr>
-        <td><%= link_to d[:name], "/cmdb/devices/#{d[:infrid]}" %> <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= d[:infrid] %>"><span class="fa fa-external-link"></span></a></td>
+        <td><%= link_to d[:name], "/cmdb/devices/#{d[:infrid]}" %>
+          <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= d[:infrid] %>"><span class="fa fa-external-link"></span></a>
+        </td>
         <td><%= d["model_nb"] %></td>
         <td><%= d["real_ip"] %></td>
         <td><%= d["ip"] %></td>
