--- a/app/views/cmdb/devices/show.html.erb
+++ b/app/views/cmdb/devices/show.html.erb
@@ -17,9 +17,9 @@
   <div class="col-xs-1 col-md-1 col-lx-1">
     <p class="text-right">
       <%= link_to('<button type="button" class="btn btn-primary btn-sm">Update from device</button><br />'.html_safe, {action: "update_from_device"}) %>
-      <small>Created at</small> <%= d[:creationdate].to_s(:db) %>
+      <small>Created at</small> <%= d[:creationdate].to_s(:custom_short) %>
       <br/>
-      <small>Updated at</small> <%= d[:lastchangedate].to_s(:db) %>
+      <small>Updated at</small> <%= d[:lastchangedate].to_s(:custom_short) %>
       <br/>
       <%# TODO: fix this ugly date%>
       <small>Dev updated at</small> <%= @device.timestamps[:parsed_configuration].to_s unless @device.timestamps.nil? %>
@@ -58,9 +58,11 @@
   <% ) if d[:peerid].present? && d[:peerid] > 0 %>
   <tr>
     <th>Site</th>
-    <td><%= link_to d[:sitid_value], "/cmdb/sites/#{d[:sitid]}" %>
-      <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= d[:sitid] %>"><span class="fa fa-external-link"></span></a>
-      <small>id: <%= d[:sitid] %></small>
+    <td>
+      <% ( %><%= link_to d[:sitid_value], "/cmdb/sites/#{d[:sitid]}" %>
+          <a href="https://r2.grenoble.hp.com/operations/direct/infra/<%= d[:sitid] %>"><span class="fa fa-external-link"></span></a>
+          <small>id: <%= d[:sitid] %></small>
+      <% ) if d[:sitid] != 0 %>
     </td>
   </tr>
   <tr>
@@ -84,16 +86,16 @@
     <td><%= d[:category] %></td>
   </tr>
   <tr>
+    <th>Brand</th>
+    <td><%= d[:brand] %></td>
+  </tr>
+  <tr>
     <th>Type</th>
     <td><%= d[:type] %></td>
   </tr>
   <tr>
     <th>Description</th>
     <td><%= d[:description] %></td>
-  </tr>
-  <tr>
-    <th>Brand</th>
-    <td><%= d[:brand] %></td>
   </tr>
   <tr>
     <th>Model</th>
@@ -198,13 +200,13 @@
   <% ( %>
       <tr>
         <th>Moved to production</th>
-        <td><%= d[:first_mtp_date].to_s(:long) %></td>
+        <td><%= d[:first_mtp_date].to_s(:custom_short) %></td>
       </tr>
   <% ) unless (d[:first_mtp_date].nil? || d[:first_mtp_date] == "0000-00-00 00:00:00") %>
   <% ( %>
       <tr>
         <th>Moved to obsolete</th>
-        <td><%= d[:last_obsolete_date].to_s(:long) %></td>
+        <td><%= d[:last_obsolete_date].to_s(:custom_short) %></td>
       </tr>
   <% ) unless (d[:last_obsolete_date].nil? || d[:last_obsolete_date] == "0000-00-00 00:00:00") %>
   </tbody>
