Very basic support for organizations

--- a/app/views/cmdb/sites/index.html.erb
+++ b/app/views/cmdb/sites/index.html.erb
@@ -2,6 +2,7 @@
   <div class="col-xs-11 col-sm-11 col-md-11 col-lx-11">
     <h1>
       <small>Sites</small>
+      <%= @org_name[:name] if @org_nameE %>
     </h1>
   </div>
   <div class="col-xs-1 col-md-1 col-lx-1">
