--- a/app/views/cmdb/sites/index.html.erb
+++ b/app/views/cmdb/sites/index.html.erb
@@ -2,12 +2,12 @@
   <div class="col-xs-11 col-sm-11 col-md-11 col-lx-11">
     <h1>
       <small>Sites</small>
-      <%= @org_name[:name] if @org_nameE %>
+      <%= @org_name[:name] if @org_name %>
     </h1>
   </div>
   <div class="col-xs-1 col-md-1 col-lx-1">
     <p class="text-right">
-      <%= link_to('<button type="button" class="btn btn-primary btn-sm">Update from CMDB+</button><br />'.html_safe, {action: "update_from_cmdb"}) %>
+      <%= link_to('<button type="button" class="btn btn-primary btn-sm">Update from CMDB+</button><br />'.html_safe, {action: "update_from_cmdb", org_id: @org_id}) %>
       <small>Version</small> <%= @cmdb_ver %>
       <br/>
       <small>Count</small> <%= @sites.count %>
