--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
   </div><!--/row-->
 
   <footer>
-    <p>&copy; HP ES 2014</p>
+    <p>&copy; HPE 2016</p>
   </footer>
 
 </div> <!-- /container -->
