Added Aldea design and delivery task pats and fields for better tracking

--- a/app/views/cmdb/sites/show.adoc.erb
+++ b/app/views/cmdb/sites/show.adoc.erb
@@ -15,7 +15,19 @@ Roman Priesol <rpriesol@hpe.com>
 - CMDB+ site: https://r2.grenoble.hp.com/operations/direct/infra/<%= s[:infrid] %>
 - MyCMDB: http://localhost:3000/cmdb/sites/<%= s[:infrid] %>
 - Aldea project: https://eu-i.serviceportal.hp.com/aldea/srm/workbook.aspx?ProjectID=
-- Aldea task: https://eu-i.serviceportal.hp.com/aldea/srm/request_edit.aspx?RequestID=
+- Aldea design task: https://eu-i.serviceportal.hp.com/aldea/srm/request_edit.aspx?RequestID=
+- Aldea delivery task: https://eu-i.serviceportal.hp.com/aldea/srm/request_edit.aspx?RequestID=
+- SM9: 
+
+.Status:
+- [ ] Design
+* [ ] Quote
+* [ ] RFC
+- [ ] Delivery
+* [ ] HW Ordered
+* [ ] HW Delivered
+* [ ] Change planed
+- [ ] Implemented
 
 .Address
 ----
