Updated rails from 4.2.8 to 5.0.2 and all other gems. Preserved font-awesome, instead of default glyphicons.

--- a/app/views/cmdb/sites/index.html.erb
+++ b/app/views/cmdb/sites/index.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="col-xs-1 col-md-1 col-lx-1">
     <p class="text-right">
-      <%= link_to('<button type="button" class="btn btn-primary btn-sm">Update from CMDB+</button><br />'.html_safe, {action: "update_from_cmdb", org_id: @org_id}) %>
+      <%= link_to('<button type="button" class="btn btn-primary btn-sm pull-right">Update from CMDB+</button><br />'.html_safe, {action: "update_from_cmdb", org_id: @org_id}) %>
       <small>Version</small> <%= @cmdb_ver %>
       <br/>
       <small>Count</small> <%= @sites.count %>
