--- a/app/views/cmdb/devices/index.html.erb
+++ b/app/views/cmdb/devices/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="col-xs-1 col-md-1 col-lx-1">
     <p class="text-right">
-      <%= link_to('<button type="button" class="btn btn-primary btn-sm">Update from CMDB+</button><br />'.html_safe, {action: "update_from_cmdb"}) %>
+      <%= link_to('<button type="button" class="btn btn-primary btn-sm pull-right">Update from CMDB+</button><br />'.html_safe, {action: "update_from_cmdb"}) %>
       <small>Version</small> <%= @cmdb_ver %>
       <br/>
       <small>Count</small> <%= @devices.count %>
