--- a/app/views/cmdb/devices/show.html.erb
+++ b/app/views/cmdb/devices/show.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="col-xs-1 col-md-1 col-lx-1">
     <p class="text-right">
-      <%= link_to('<button type="button" class="btn btn-primary btn-sm">Update from device</button><br />'.html_safe, {action: "update_from_device"}) %>
+      <%= link_to('<button type="button" class="btn btn-primary btn-sm pull-right">Update from device</button><br />'.html_safe, {action: "update_from_device"}) %>
       <small>Created at</small> <%= DateTime.parse(d[:creationdate]).to_s(:custom_short) %>
       <br/>
       <small>Updated at</small> <%= DateTime.parse(d[:lastchangedate]).to_s(:custom_short) %>
